[gd_scene load_steps=12 format=4 uid="uid://bc3frghorywo0"]

[ext_resource type="Script" path="res://scripts/fuelfill_minigame.gd" id="1_20hnk"]
[ext_resource type="Texture2D" uid="uid://4t58p5wmf3xg" path="res://art/tilesets/minigame_window.png" id="1_asstw"]
[ext_resource type="Texture2D" uid="uid://ca3i6mi0omyy4" path="res://art/tilesets/selenia_ground.png" id="2_ql4lj"]
[ext_resource type="Texture2D" uid="uid://dv3tdfuv6db7i" path="res://art/tilesets/fueltank.png" id="3_j0coq"]
[ext_resource type="Texture2D" uid="uid://c5102tegcwsl4" path="res://art/keybord and controller icons/individual sprites/keyboard/F.png" id="4_jvi2j"]
[ext_resource type="Texture2D" uid="uid://daryi38pejg58" path="res://art/tilesets/timing_bar.png" id="5_icmt8"]
[ext_resource type="Texture2D" uid="uid://dg3vabk1uy8pu" path="res://art/tilesets/timing_arrow.png" id="6_3ydl7"]
[ext_resource type="Texture2D" uid="uid://q65rb1o0nj7y" path="res://art/keybord and controller icons/individual sprites/controller/controller button 55.png" id="8_rpneq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_62gsd"]
texture = ExtResource("1_asstw")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_874n2"]
texture = ExtResource("2_ql4lj")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -4.5625, 8, -4.1875, -4.125, 4.3125, -4.375, 3.8125, 8, 8, 8, 8, -8, -8, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.125, -4.375, -4.125, -4.75, 8, -8, 8, -8, -8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.125, -8, -4.4375, -8, -8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 4.125, 8, 4.125, -4.375, -8, -4.75, -8, -8, 8, -8)
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.375, -8, -8, -8, -8, 8, -4.25, 8)
0:1/0/physics_layer_0/polygon_1/points = PackedVector2Array(3.875, -8, 8, -8, 8, 8, 3.875, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4.125, -8, -3.75, 8, -8, 8)
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 3.4375, 8, 3.9375, -8, 8, -8)
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4.5625, -8, -4.4375, 4.5, 4.3125, 4.375, 3.8125, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4.125, -8, -4.125, 4.375, 8, 4.75, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 4.125, 8, 3.75, 8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 4.125, 4.375, 4.125, 4.75, -8, 8, -8, 8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.5625, -8, -8, -8, -8, 8, -3.9375, 8)
0:3/0/physics_layer_0/polygon_1/points = PackedVector2Array(3.875, -8, 8, -8, 8, 8, 3.875, 8)
0:3/0/physics_layer_0/polygon_2/points = PackedVector2Array(-3.4375, -6.375, 3.5625, -6.5, 3.4375, -8, -3.8125, -8)
0:3/0/physics_layer_0/polygon_3/points = PackedVector2Array(3.8125, 5.125, 3.4375, 8, -3.3125, 8, -3.6875, 5.25)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.5625, -4.5, -4.4375, -4.375, 4.3125, 8, 3.8125, 8, 8, -8, 8, -8, -8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.375, -8, 8, 8, 8, 8, 4.25)
2:3/0/physics_layer_0/polygon_1/points = PackedVector2Array(-8, -3.875, -8, -8, 8, -8, 8, -3.875)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, -4.5625, 4.5, -4.4375, 4.375, 4.3125, -8, 4.375, -8, 8, 8, 8, 8, -8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)

[sub_resource type="TileSet" id="TileSet_bl5e4"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_874n2")

[node name="fuelfill_minigame" type="CanvasLayer"]
script = ExtResource("1_20hnk")

[node name="FuelGame" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="FuelGame"]
z_index = -1
layout_mode = 0
offset_left = 5.0
offset_top = 9.0
offset_right = 476.0
offset_bottom = 265.0
theme_override_styles/panel = SubResource("StyleBoxTexture_62gsd")

[node name="ground" type="TileMapLayer" parent="FuelGame/PanelContainer"]
modulate = Color(0.641934, 0.641934, 0.641934, 1)
z_index = -3
position = Vector2(-5, -8)
tile_map_data = PackedByteArray("AAADAAIAAQACAAEAAAAEAAIAAQACAAEAAAAEAAMAAQACAAEAAAAFAAMAAQACAAEAAAAGAAQAAQACAAEAAAAHAAUAAQACAAEAAAAIAAYAAQACAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAEAAAAKAAcAAQACAAEAAAALAAcAAQACAAEAAAALAAgAAQACAAEAAAAMAAgAAQACAAEAAAAMAAkAAQACAAEAAAANAAkAAQACAAEAAAAOAAkAAQACAAEAAAAOAAoAAQACAAEAAAAPAAoAAQACAAEAAAAQAAoAAQACAAEAAAAQAAsAAQACAAEAAAARAAsAAQACAAEAAAASAAsAAQACAAEAAAATAAsAAQACAAEAAAATAAwAAQACAAEAAAAUAAwAAQACAAEAAAAVAAwAAQACAAEAAAAVAA0AAQACAAEAAAAWAA0AAQACAAEAAAADAAMAAQACAAEAAAADAAQAAQACAAEAAAADAAUAAQACAAEAAAADAAYAAQACAAEAAAADAAcAAQACAAEAAAADAAgAAQACAAEAAAADAAkAAQACAAEAAAADAAoAAQACAAEAAAADAAsAAQACAAEAAAADAAwAAQACAAEAAAADAA0AAQACAAEAAAADAA4AAQACAAEAAAAEAA4AAQACAAEAAAAFAA4AAQACAAEAAAAGAA4AAQACAAEAAAAHAA4AAQACAAEAAAAIAA4AAQACAAEAAAAJAA4AAQACAAEAAAAKAA4AAQACAAEAAAALAA4AAQACAAEAAAAMAA4AAQACAAEAAAANAA4AAQACAAEAAAAOAA4AAQACAAEAAAAPAA4AAQACAAEAAAAQAA4AAQACAAEAAAARAA4AAQACAAEAAAASAA4AAQACAAEAAAATAA4AAQACAAEAAAAUAA4AAQACAAEAAAAVAA4AAQACAAEAAAAWAA4AAQACAAEAAAAXAA4AAQACAAEAAAAYAA4AAQACAAEAAAAZAA4AAQACAAEAAAAaAA4AAQACAAEAAAAaAA0AAQACAAEAAAAaAAwAAQACAAEAAAAaAAsAAQACAAEAAAAaAAoAAQACAAEAAAAaAAkAAQACAAEAAAAaAAgAAQACAAEAAAAaAAcAAQACAAEAAAAaAAYAAQACAAEAAAAaAAUAAQACAAEAAAAaAAQAAQACAAEAAAAaAAMAAQACAAEAAAAaAAIAAQACAAEAAAAZAAIAAQACAAEAAAAYAAIAAQACAAEAAAAXAAIAAQACAAEAAAAWAAIAAQACAAEAAAAVAAIAAQACAAEAAAAUAAIAAQACAAEAAAATAAIAAQACAAEAAAASAAIAAQACAAEAAAARAAIAAQACAAEAAAAQAAIAAQACAAEAAAAPAAIAAQACAAEAAAAOAAIAAQACAAEAAAANAAIAAQACAAEAAAAMAAIAAQACAAEAAAALAAIAAQACAAEAAAAKAAIAAQACAAEAAAAJAAIAAQACAAEAAAAIAAIAAQACAAEAAAAHAAIAAQACAAEAAAAGAAIAAQACAAEAAAAFAAIAAQACAAEAAAAGAAMAAQACAAEAAAAHAAMAAQACAAEAAAAIAAMAAQACAAEAAAAHAAQAAQACAAEAAAAIAAQAAQACAAEAAAAIAAUAAQACAAEAAAAJAAQAAQACAAEAAAAJAAMAAQACAAEAAAAJAAUAAQACAAEAAAAKAAYAAQACAAEAAAAKAAUAAQACAAEAAAAKAAQAAQACAAEAAAAKAAMAAQACAAEAAAALAAMAAQACAAEAAAALAAQAAQACAAEAAAALAAUAAQACAAEAAAALAAYAAQACAAEAAAAMAAYAAQACAAEAAAAMAAUAAQACAAEAAAAMAAQAAQACAAEAAAAMAAMAAQACAAEAAAAMAAcAAQACAAEAAAANAAcAAQACAAEAAAANAAYAAQACAAEAAAANAAUAAQACAAEAAAANAAQAAQACAAEAAAANAAMAAQACAAEAAAAOAAUAAQACAAEAAAAOAAYAAQACAAEAAAAOAAcAAQACAAEAAAAOAAgAAQACAAEAAAAPAAgAAQACAAEAAAANAAgAAQACAAEAAAAOAAQAAQACAAEAAAAOAAMAAQACAAEAAAAPAAMAAQACAAEAAAAPAAQAAQACAAEAAAAPAAUAAQACAAEAAAAPAAYAAQACAAEAAAAPAAcAAQACAAEAAAAQAAkAAQACAAEAAAAQAAgAAQACAAEAAAAQAAcAAQACAAEAAAAQAAYAAQACAAEAAAAQAAUAAQACAAEAAAAQAAQAAQACAAEAAAAQAAMAAQACAAEAAAARAAMAAQACAAEAAAARAAQAAQACAAEAAAARAAUAAQACAAEAAAARAAYAAQACAAEAAAARAAcAAQACAAEAAAARAAgAAQACAAEAAAARAAkAAQACAAEAAAARAAoAAQACAAEAAAASAAoAAQACAAEAAAASAAkAAQACAAEAAAASAAgAAQACAAEAAAASAAcAAQACAAEAAAASAAYAAQACAAEAAAASAAUAAQACAAEAAAASAAQAAQACAAEAAAASAAMAAQACAAEAAAATAAMAAQACAAEAAAATAAQAAQACAAEAAAATAAUAAQACAAEAAAATAAYAAQACAAEAAAATAAcAAQACAAEAAAATAAgAAQACAAEAAAATAAkAAQACAAEAAAAUAAkAAQACAAEAAAAUAAoAAQACAAEAAAATAAoAAQACAAEAAAAUAAsAAQACAAEAAAAVAAsAAQACAAEAAAAWAAsAAQACAAEAAAAXAAsAAQACAAEAAAAXAAwAAQACAAEAAAAYAAwAAQACAAEAAAAXAA0AAQACAAEAAAAWAAwAAQACAAEAAAAYAA0AAQACAAEAAAAZAA0AAQACAAEAAAAZAAwAAQACAAEAAAAZAAsAAQACAAEAAAAZAAoAAQACAAEAAAAZAAkAAQACAAEAAAAZAAgAAQACAAEAAAAZAAcAAQACAAEAAAAZAAYAAQACAAEAAAAZAAUAAQACAAEAAAAZAAQAAQACAAEAAAAZAAMAAQACAAEAAAAYAAMAAQACAAEAAAAYAAQAAQACAAEAAAAYAAUAAQACAAEAAAAYAAYAAQACAAEAAAAYAAcAAQACAAEAAAAYAAgAAQACAAEAAAAYAAkAAQACAAEAAAAYAAoAAQACAAEAAAAYAAsAAQACAAEAAAAXAAoAAQACAAEAAAAXAAkAAQACAAEAAAAXAAgAAQACAAEAAAAXAAcAAQACAAEAAAAXAAYAAQACAAEAAAAXAAUAAQACAAEAAAAXAAQAAQACAAEAAAAXAAMAAQACAAEAAAAWAAMAAQACAAEAAAAWAAQAAQACAAEAAAAWAAUAAQACAAEAAAAWAAYAAQACAAEAAAAWAAcAAQACAAEAAAAWAAgAAQACAAEAAAAWAAkAAQACAAEAAAAWAAoAAQACAAEAAAAVAAQAAQACAAEAAAAVAAMAAQACAAEAAAAVAAUAAQACAAEAAAAVAAYAAQACAAEAAAAVAAcAAQACAAEAAAAVAAgAAQACAAEAAAAVAAkAAQACAAEAAAAVAAoAAQACAAEAAAAUAAcAAQACAAEAAAAUAAYAAQACAAEAAAAUAAUAAQACAAEAAAAUAAQAAQACAAEAAAAUAAMAAQACAAEAAAAUAAgAAQACAAEAAAAUAA0AAQACAAEAAAATAA0AAQACAAEAAAASAA0AAQACAAEAAAASAAwAAQACAAEAAAARAA0AAQACAAEAAAARAAwAAQACAAEAAAAQAAwAAQACAAEAAAAQAA0AAQACAAEAAAAPAA0AAQACAAEAAAAPAAwAAQACAAEAAAAPAAsAAQACAAEAAAAOAAwAAQACAAEAAAAOAA0AAQACAAEAAAAOAAsAAQACAAEAAAANAAoAAQACAAEAAAANAAsAAQACAAEAAAANAAwAAQACAAEAAAANAA0AAQACAAEAAAAMAAoAAQACAAEAAAAMAAsAAQACAAEAAAAMAAwAAQACAAEAAAAMAA0AAQACAAEAAAALAA0AAQACAAEAAAALAAwAAQACAAEAAAALAAsAAQACAAEAAAALAAoAAQACAAEAAAALAAkAAQACAAEAAAAKAA0AAQACAAEAAAAKAAwAAQACAAEAAAAKAAsAAQACAAEAAAAKAAoAAQACAAEAAAAKAAkAAQACAAEAAAAKAAgAAQACAAEAAAAJAAgAAQACAAEAAAAJAAkAAQACAAEAAAAJAAoAAQACAAEAAAAJAAsAAQACAAEAAAAJAAwAAQACAAEAAAAJAA0AAQACAAEAAAAIAA0AAQACAAEAAAAIAAwAAQACAAEAAAAIAAsAAQACAAEAAAAIAAoAAQACAAEAAAAIAAkAAQACAAEAAAAIAAgAAQACAAEAAAAIAAcAAQACAAEAAAAHAAYAAQACAAEAAAAHAAcAAQACAAEAAAAHAAgAAQACAAEAAAAHAAkAAQACAAEAAAAHAAoAAQACAAEAAAAHAAsAAQACAAEAAAAHAAwAAQACAAEAAAAHAA0AAQACAAEAAAAGAA0AAQACAAEAAAAGAAwAAQACAAEAAAAGAAsAAQACAAEAAAAGAAoAAQACAAEAAAAGAAkAAQACAAEAAAAGAAgAAQACAAEAAAAGAAcAAQACAAEAAAAGAAYAAQACAAEAAAAGAAUAAQACAAEAAAAFAAQAAQACAAEAAAAFAAUAAQACAAEAAAAFAAYAAQACAAEAAAAFAAcAAQACAAEAAAAFAAwAAQACAAEAAAAFAA0AAQACAAEAAAAFAAsAAQACAAEAAAAFAAoAAQACAAEAAAAFAAkAAQACAAEAAAAFAAgAAQACAAEAAAAEAAwAAQACAAEAAAAEAA0AAQACAAEAAAAEAAsAAQACAAEAAAAEAAoAAQACAAEAAAAEAAkAAQACAAEAAAAEAAgAAQACAAEAAAAEAAcAAQACAAEAAAAEAAYAAQACAAEAAAAEAAUAAQACAAEAAAAEAAQAAQACAAEAAAABAA0AAQAEAAMAAAABAA4AAQAEAAIAAAACAA0AAQAFAAMAAAACAA4AAQAFAAIAAAABAAsAAQAEAAMAAAABAAwAAQAEAAIAAAACAAsAAQAFAAMAAAACAAwAAQAFAAIAAAABAAkAAQAEAAMAAAABAAoAAQAEAAIAAAACAAkAAQAFAAMAAAACAAoAAQAFAAIAAAABAAcAAQAEAAMAAAABAAgAAQAEAAIAAAACAAcAAQAFAAMAAAACAAgAAQAFAAIAAAABAAUAAQAEAAMAAAABAAYAAQAEAAIAAAACAAUAAQAFAAMAAAACAAYAAQAFAAIAAAABAAMAAQAEAAMAAAABAAQAAQAEAAIAAAACAAMAAQAFAAMAAAACAAQAAQAFAAIAAAABAAIAAQAEAAIAAAACAAEAAQAEAAIAAAACAAIAAQAFAAIAAAADAAEAAQAFAAIAAAAEAAEAAQAEAAIAAAAFAAEAAQAFAAIAAAAGAAEAAQAEAAIAAAAHAAEAAQAFAAIAAAAIAAEAAQAEAAIAAAAJAAEAAQAFAAIAAAAKAAEAAQAEAAIAAAALAAEAAQAFAAIAAAAMAAEAAQAEAAIAAAANAAEAAQAFAAIAAAAOAAEAAQAEAAIAAAAPAAEAAQAFAAIAAAAQAAEAAQAEAAIAAAARAAEAAQAFAAIAAAASAAEAAQAEAAIAAAATAAEAAQAFAAIAAAAUAAEAAQAEAAIAAAAVAAEAAQAFAAIAAAAWAAEAAQAEAAIAAAAXAAEAAQAFAAIAAAAYAAEAAQAEAAIAAAAZAAEAAQAFAAIAAAAaAAEAAQAEAAIAAAAbAAEAAQAFAAIAAAAbAAIAAQAEAAIAAAAcAAIAAQAFAAIAAAAbAAMAAQAEAAMAAAAbAAQAAQAEAAIAAAAcAAMAAQAFAAMAAAAcAAQAAQAFAAIAAAAbAAUAAQAEAAMAAAAbAAYAAQAEAAIAAAAcAAUAAQAFAAMAAAAcAAYAAQAFAAIAAAAbAAcAAQAEAAMAAAAbAAgAAQAEAAIAAAAcAAcAAQAFAAMAAAAcAAgAAQAFAAIAAAAbAAkAAQAEAAMAAAAbAAoAAQAEAAIAAAAcAAkAAQAFAAMAAAAcAAoAAQAFAAIAAAAbAAsAAQAEAAMAAAAbAAwAAQAEAAIAAAAcAAsAAQAFAAMAAAAcAAwAAQAFAAIAAAAbAA0AAQAEAAMAAAAbAA4AAQAEAAIAAAAcAA0AAQAFAAMAAAAcAA4AAQAFAAIAAAACAA8AAQAEAAIAAAADAA8AAQAFAAIAAAAEAA8AAQAEAAIAAAAFAA8AAQAFAAIAAAAGAA8AAQAEAAIAAAAHAA8AAQAFAAIAAAAIAA8AAQAEAAIAAAAJAA8AAQAFAAIAAAAKAA8AAQAEAAIAAAALAA8AAQAFAAIAAAAMAA8AAQAEAAIAAAANAA8AAQAFAAIAAAAOAA8AAQAEAAIAAAAPAA8AAQAFAAIAAAAQAA8AAQAEAAIAAAARAA8AAQAFAAIAAAASAA8AAQAEAAIAAAATAA8AAQAFAAIAAAAUAA8AAQAEAAIAAAAVAA8AAQAFAAIAAAAWAA8AAQAEAAIAAAAXAA8AAQAFAAIAAAAYAA8AAQAEAAIAAAAZAA8AAQAFAAIAAAAaAA8AAQAEAAIAAAAbAA8AAQAFAAIAAAAPAAkAAQACAAEAAAA=")
tile_set = SubResource("TileSet_bl5e4")

[node name="start_fuel" type="Sprite2D" parent="FuelGame/PanelContainer"]
position = Vector2(107, 129)
scale = Vector2(4, 4)
texture = ExtResource("3_j0coq")
hframes = 5

[node name="end_fuel" type="Sprite2D" parent="FuelGame/PanelContainer"]
position = Vector2(365, 130)
scale = Vector2(4, 4)
texture = ExtResource("3_j0coq")
hframes = 5
frame = 1

[node name="f_key" type="Sprite2D" parent="FuelGame/PanelContainer"]
modulate = Color(0.881937, 0.881937, 0.881937, 1)
position = Vector2(317, 131)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_jvi2j")

[node name="launch" type="Sprite2D" parent="FuelGame/PanelContainer"]

[node name="TimingBar" type="Sprite2D" parent="FuelGame/PanelContainer"]
position = Vector2(247, 130)
scale = Vector2(3, 3)
texture = ExtResource("5_icmt8")

[node name="TimingArrow" type="Sprite2D" parent="FuelGame/PanelContainer"]
modulate = Color(0.804743, 0.804743, 0.804743, 1)
position = Vector2(200, 130)
scale = Vector2(3, 3)
texture = ExtResource("6_3ydl7")

[node name="fail_1" type="Sprite2D" parent="FuelGame/PanelContainer"]
self_modulate = Color(0.42, 0.42, 0.42, 1)
position = Vector2(334, 74)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_rpneq")

[node name="fail_2" type="Sprite2D" parent="FuelGame/PanelContainer"]
self_modulate = Color(0.42, 0.42, 0.42, 1)
position = Vector2(364, 74)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_rpneq")

[node name="fail_3" type="Sprite2D" parent="FuelGame/PanelContainer"]
self_modulate = Color(0.42, 0.42, 0.42, 1)
position = Vector2(394, 74)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_rpneq")

[node name="Timer" type="Timer" parent="FuelGame"]

[connection signal="timeout" from="FuelGame/Timer" to="." method="_on_timer_timeout"]
